--- a/index.css
+++ b/index.css
@@ -1,25 +1,66 @@
 /*©2025 Ketonal Project IT Group*/
 /*Created by GiMaker and snaplk*/
 
+
+html {
+    overflow: auto;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Inter, sans-serif;
+    line-height: 1.6;
+    color: #fff;
+    overflow-x: hidden;
+    position: relative;
+    min-height: 100vh;
+    padding: 20px;
+}
+
+.container {
+    padding-left: 20px;
+    padding-right: 20px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+}
+
+.background-video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -2;
+    transition: opacity 1.2s ease;
+    filter: blur(0%);
+}
+
+
 .header {
     background-color: rgba(255, 255, 255, 0.783);
     backdrop-filter: blur(10px);
-    padding-left: 10px;
-    height: fit-content;
+    padding: 0 20px;
+    height: 60px;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    text-align: center;
-    font-size: 24px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-
-
-    display: flex;
     border-radius: 14px;
-    position: sticky;
+    position: fixed;
     z-index: 2;
-    width: 90%;
+    width: calc(100% - 80px); /* теперь не едет при смене размера */
+    left: 40px; 
     top: 2%;
-    left: 5%;
     border: white 1px solid;
 }
 
@@ -29,275 +70,218 @@
     inset: 0;
     border-radius: 14px;
     z-index: -1;
-    box-shadow:
-        inset 6px 6px 0px -6px rgba(255, 255, 255, 0.7),
-        inset 0 0 8px 1px rgba(255, 255, 255, 0.7);
+    box-shadow: inset 6px 6px 0px -6px rgba(255, 255, 255, 0.7),
+    inset 0 0 8px 1px rgba(255, 255, 255, 0.7);
 }
 
-/*.ipbox {*/
-/*    border: 2px solid #000000;*/
-/*    border-radius: 8px;*/
-/*    display: flex;*/
-/*    margin-right: 10px;*/
-/*    padding-top: 2px;*/
-/*    align-items: center;*/
-/*    margin-top: 10px;*/
-/*    margin-bottom: 10px;*/
-/*}*/
-
-/*.ip {*/
-/*    font-family: Inter, sans-serif;*/
-/*    color: #000000;*/
-/*    font-size: 25px;*/
-/*    margin-left: 15px;*/
-
-/*}*/
-
-/*.copy-button {*/
-/*    background-color: rgba(0, 0, 0, 0);*/
-/*    color: #000000;*/
-/*    border: none;*/
-/*    padding-top: 3px;*/
-/*    border-radius: 4px;*/
-/*    cursor: pointer;*/
-/*}*/
-
-/*.copy-icon {*/
-/*    opacity: 0.5;*/
-/*}*/
+.header-left {
+    display: flex;
+    align-items: center;
+    gap: 0;
+}
 
 .logo {
-    display: inline-block;
-    vertical-align: middle;
-    margin-top: 5px;
-    border-radius: 8px;
+    display: flex;
+    align-items: center;
 }
 
-body {
+.logo-img {
+    height: 40px;
+    width: 40px;
+}
+
+.nav-menu {
+    display: flex;
+    gap: 30px;
+    margin-left: 20px;
+}
+
+.nav-link {
+    color: #515151;
+    text-decoration: none;
     font-family: Inter, sans-serif;
-    line-height: 1.6;
+    font-size: 16px;
+    font-weight: 500;
+    transition: color 0.3s ease;
+    position: relative;
+    padding: 8px 0;
+    white-space: nowrap;
+}
+
+.nav-link:hover {
+    color: #000;
+}
+
+.nav-link::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #58f2d6;
+    transition: width 0.3s ease;
+}
+
+.nav-link:hover::after {
+    width: 100%;
+}
+
+.header-controls {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.theme-toggle {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+    color: #515151;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+.theme-toggle:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+    color: #000;
+}
+
+.discord-login-btn {
+    background-color: #5865F2;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-family: Inter, sans-serif;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    transition: background-color 0.3s ease;
+    height: 40px;
+}
+
+.discord-login-btn:hover {
+    background-color: #4752c4;
+}
+
+
+.main-content {
+    padding-top: 100px;
+    width: 100%;
+    margin: 0 auto;
+    align-items: center;
+    position: relative;
+
+}
+
+
+.hero-section {
+    align-items: center;
+    text-align: center;
+/*    padding: 60px 0; */
+    top: 50%; /* На меньших устройствах было ниже чем должно быть */
+    border-radius: 18px;
+    color: white;
+    margin-bottom: 40px;
+    position: relative;
+    overflow: hidden;
+    height: 50vw
+}
+
+
+.hero-title {
+    margin-top: 150px;
+    font-family: 'Archivo Black', sans-serif;
+    font-size: 3.5rem;
+    text-shadow: 3px 3px 0 rgba(0, 0, 0, 0.2);
+    letter-spacing: 2px;
+}
+
+.hero-subtitle {
+    font-size: 1.5rem;
+    max-width: 800px;
+    margin: 0 auto;
+    font-weight: 300;
+}
+
+.play-section {
+    background-color: rgba(255, 255, 255, 0.783);
+    backdrop-filter: blur(10px);
+    border-radius: 14px;
+    padding: 40px;
+    margin-bottom: 50px;
+    border: white 1px solid;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+    overflow: hidden;
+}
+
+.play-section::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 1px;
+    box-shadow: inset 6px 6px 0px -6px rgba(255, 255, 255, 0.7),
+    inset 0 0 8px 1px rgba(255, 255, 255, 0.7);
+}
+
+.section-title {
+    font-family: 'Archivo Black', sans-serif;
+    font-size: 2.2rem;
+    margin-bottom: 30px;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    padding-bottom: 15px;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.section-title::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80px;
+    height: 4px;
+    background: linear-gradient(to right, #19bb9d, #09a185);
+    border-radius: 2px;
+}
+
+.play-text {
+    font-size: 1.1rem;
+    line-height: 1.7;
+    color: #515151;
+    text-align: center;
+}
+
+.play-content {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
 }
 
 .footer {
-    background-color: #f8f9fa;
+    background-color: rgba(255, 255, 255, 0.783);
+    backdrop-filter: blur(10px);
     padding: 10px;
     text-align: center;
     font-size: 14px;
     color: #666;
-    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 14px;
-}
-
-#scroll-block {
-    height: 1500px;
-    position: relative;
-}
-
-.mediapreview {
-    position: relative;
-    display: flex;
-    flex-direction: nowrap;
-    align-items: center;
-    justify-content: center;
-    top: 10px;
-    border-radius: 14px;
-    height: 500px;
-    background: #ffffff;
-    position: sticky;
-}
-
-.mediapreview > div {
-    position: absolute;
-    display: block;
-    border-radius: 16px;
-    overflow: hidden;
-    object-fit: cover;
-    z-index: 0;
-}
-
-.mediapreview > div img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 14px;
-}
-
-.mediapreview > span.mediaketonal {
-    position: relative; /* above all images */
-    z-index: 1;
-    color: white; /* base color */
-    mix-blend-mode: difference; /* invert on light bg */
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 500;
-    font-size: 48px;
-    letter-spacing: 20px;
-    left: 6px;
-    user-select: none;
-}
-
-.media1 {
-    position: absolute;
-    display: block;
-    height: 0px;
-    width: 0px;
-    border-radius: 16px;
-    overflow: hidden;
-    object-fit: cover;
-    animation: move3 ease-out forwards;
-    animation-timeline: scroll(root block);
-}
-
-@keyframes move1 {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(200px);
-        height: 300px;
-        width: 150px;
-    }
-}
-
-@keyframes move2 {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translate(-275px, 150px);
-        width: 300px;
-        height: 300px;
-    }
-}
-
-@keyframes move3 {
-    0% {
-        transform: translateX(0);
-        opacity: 1;
-    }
-    100% {
-        width: 100%;
-        height: 100%;
-        opacity: 0.3;
-    }
-}
-
-.media2 {
-    position: absolute;
-    display: block;
-    height: 0px;
-    width: 0px;
-    border-radius: 16px;
-    overflow: hidden;
-    object-fit: cover;
-    animation: move2 ease-in forwards;
-    animation-timeline: scroll(root block);
-}
-
-.media3 {
-    position: absolute;
-    display: block;
-    height: 0px;
-    width: 0px;
-    border-radius: 16px;
-    overflow: hidden;
-    object-fit: cover;
-    animation: move1 cubic-bezier(.19, .45, .62, 1) forwards;
-    animation-timeline: scroll(root block);
-}
-
-@keyframes move4 {
-    0% {
-        transform: translateX(0);
-        opacity: 1;
-        width: 0px;
-    }
-    100% {
-        width: 150px;
-        height: 75px;
-        opacity: 0.7;
-        transform: translate(-400px, -50px);
-    }
-}
-
-.media4 {
-    position: absolute;
-    display: block;
-    height: 0px;
-    width: 0px;
-    border-radius: 16px;
-    overflow: hidden;
-    object-fit: cover;
-    animation: move4 ease-out forwards;
-    animation-timeline: scroll(root block);
-}
-
-@keyframes move5 {
-    0% {
-        width: 0px;
-        height: 0;
-    }
-    100% {
-        width: 320px;
-        height: 100px;
-    }
-}
-
-.media5 {
-    position: absolute;
-    display: block;
-    height: 0px;
-    width: 0px;
-    border-radius: 16px;
-    overflow: hidden;
-    object-fit: cover;
-    color: white;
-    animation: move5 ease-out forwards;
-    animation-timeline: scroll(root block);
-}
-
-@keyframes move6 {
-    0% {
-        width: 0px;
-        height: 0;
-    }
-    100% {
-        width: 100px;
-        height: 100px;
-        transform: translate(-125px, -125px);
-        opacity: 0.5;
-    }
-}
-
-.media6 {
-    position: absolute;
-    display: block;
-    height: 0px;
-    width: 0px;
-    border-radius: 16px;
-    overflow: hidden;
-    object-fit: cover;
-    animation: move6 cubic-bezier(0, .53, .58, .98) forwards;
-    animation-timeline: scroll(root block);
-}
-
-.media7 {
-    position: absolute;
-    display: block;
-    height: 0px;
-    width: 0px;
-    border-radius: 16px;
-    overflow: hidden;
-    object-fit: cover;
-}
-
-.media8 {
-    position: absolute;
-    display: block;
-    height: 0px;
-    width: 0px;
-    border-radius: 16px;
-    overflow: hidden;
-    object-fit: cover;
 }
 
 .description {
@@ -322,8 +306,8 @@ body {
 }
 
 hr.solid {
-  border-top: 3px solid #ecebeb;
-  width: 100%;
+    border-top: 3px solid #ecebeb;
+    width: 100%;
 }
 
 .footer {
@@ -336,7 +320,7 @@ hr.solid {
 }
 
 .footer-container {
-    width: 100%; /* It makes gaps on right side if not */
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -415,6 +399,7 @@ hr.solid {
 .social-btn:hover path {
     fill: white;
 }
+
 /*end*/
 /*ip-box beg*/
 .ip-box {
@@ -516,3 +501,430 @@ hr.solid {
 }
 
 /*end*/
+.mtop-10 {
+    margin-top: 10px;
+}
+
+.footer {
+    background-color: #ffffff;
+    padding: 30px 40px;
+    box-sizing: border-box;
+    border-top: 1px solid #ddd;
+    color: #222;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.footer-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 40px;
+}
+
+
+.logo {
+    font-family: "Archivo Black", sans-serif;
+    font-weight: 500;
+    font-size: 1.3rem;
+    color: #000000;
+    user-select: none;
+    position: relative;
+}
+
+.logo-img {
+    height: 40px;
+    width: 40px;
+    position: relative;
+    top: 2px;
+}
+
+.disclaimer {
+    font-size: 0.9rem;
+    color: #555555;
+    max-width: 300px;
+}
+
+.footer-social {
+    display: flex;
+    gap: 15px;
+    flex: 0 0 auto;
+}
+
+
+.social-buttons {
+    display: flex;
+    gap: 15px;
+    padding: 20px;
+}
+
+.social-btn {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border: none;
+}
+
+.social-btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.social-btn svg {
+    width: 24px;
+    height: 24px;
+}
+
+.discord-btn:hover {
+    background: #5865F2;
+}
+
+.youtube-btn:hover {
+    background: #FF0000;
+}
+
+.social-btn:hover path {
+    fill: white;
+}
+
+/*end*/
+/*ip-box beg*/
+.ip-box {
+    display: flex;
+    align-items: center;
+    background: linear-gradient(145deg, #dcfff5, #c1fff4);
+    border: 2px solid rgb(38, 255, 204);
+    border-radius: 8px;
+    padding: 0px 18px;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0);
+    backdrop-filter: blur(4px);
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
+.ip-box:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 12px 40px rgba(139, 255, 245, 0.98);
+    border-color: rgba(255, 255, 255, 0.98);
+    background: linear-gradient(145deg, #93fffb, #4dffbe);
+    transition: all 0.3s ease;
+}
+
+.ip-text {
+    color: #000000;
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin-right: 15px;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+    transition: all 0.3s ease;
+}
+
+.copy-icon {
+    width: 16px;
+    height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background: rgba(0, 0, 0, 0);
+    transition: all 0.3s ease;
+}
+
+.copy-icon i {
+    color: #000000;
+    font-size: 16px;
+    transition: all 0.15s ease;
+}
+
+.ip-box:hover .copy-icon i {
+    color: white;
+    transform: rotate(-5deg);
+}
+
+.ip-box:hover .ip-text {
+    color: rgb(255, 255, 255);
+}
+
+.success .copy-icon {
+    background: #19bb9d;
+    transform: scale(1.1);
+}
+
+.success .copy-icon i {
+    color: white;
+}
+
+.pulse {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, rgba(16, 185, 129, 0.4), transparent);
+    top: 0;
+    left: 0;
+    border-radius: 16px;
+    animation: pulse 0.6s ease-out;
+    opacity: 0;
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 1;
+        transform: scale(0.95);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1.1);
+    }
+}
+
+.ip-box:hover .tooltip {
+    opacity: 1;
+}
+
+/*end*/
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px;
+    margin-bottom: 60px;
+}
+
+.glass-card {
+    background-color: rgba(255, 255, 255, 0.783);
+    backdrop-filter: blur(10px);
+    border-radius: 16px;
+    padding: 30px;
+    border: white 1px solid;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.glass-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 12px 36px rgba(0, 0, 0, 0.3);
+}
+
+.glass-card::before {
+    content: "";
+    inset: 0;
+    border-radius: 16px;
+    z-index: -1;
+    box-shadow: inset 6px 6px 0px -6px rgba(255, 255, 255, 0.7),
+    inset 0 0 8px 1px rgba(255, 255, 255, 0.7);
+}
+
+.glass-card i {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    color: #19bb9d;
+}
+
+.glass-card h3 {
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+    color: #515151;
+}
+
+.glass-card p {
+    line-height: 1.6;
+    opacity: 0.9;
+    color: #515151;
+}
+
+.vertical-timeline {
+    display: flex;
+    margin-bottom: 60px;
+    position: relative;
+    min-height: 500px;
+}
+
+.timeline-line {
+    position: absolute;
+    left: 50px;
+    top: 0;
+    bottom: 0;
+    width: 4px;
+    background: linear-gradient(to bottom, #1ea28a, #5acd9f);
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.timeline-content {
+    flex: 1;
+    position: relative;
+    overflow: hidden;
+    margin-left: 80px;
+}
+
+.timeline-slides {
+    height: 100%;
+    position: relative;
+}
+
+.timeline-slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    pointer-events: none;
+}
+
+.timeline-slide.active {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.timeline-item {
+    background-color: rgba(255, 255, 255, 0.783);
+    backdrop-filter: blur(10px);
+    border-radius: 16px;
+    padding: 25px;
+    border: 1px solid rgb(255, 255, 255);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    position: relative;
+    color: #515151;
+}
+
+.timeline-item::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -30px;
+    width: 30px;
+    height: 2px;
+    background: #19bb9d;
+    box-shadow: inset 6px 6px 0px -6px rgba(255, 255, 255, 0.7),
+    inset 0 0 8px 1px rgba(255, 255, 255, 0.7);
+}
+
+
+.timeline-item h3 {
+    color: #19bb9d;
+    margin-bottom: 15px;
+    font-size: 1.4rem;
+}
+
+.timeline-item p {
+    line-height: 1.6;
+    opacity: 0.9;
+}
+
+.timeline-nav {
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 0;
+    flex-direction: column;
+}
+
+.timeline-nav-btn {
+    background: rgba(255, 255, 255, 0.783);
+    border: white 1px solid;
+    color: #515151;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: 1.2rem;
+
+}
+
+.timeline-nav-btn:hover {
+    background: rgba(255, 255, 255, 0.2);
+    transform: scale(1.1);
+}
+
+.timeline-nav-btn:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+    transform: none;
+}
+
+.timeline-dots {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 0;
+    margin-right: 30px;
+    height: 500px;
+}
+
+.timeline-dot {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.783);
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    z-index: 0;
+    border: 2px solid transparent;
+}
+
+.timeline-dot.active {
+    background: #19bb9d;
+    transform: scale(1.3);
+    border: white 3px solid;
+}
+
+.timeline-dot::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: transparent;
+    transition: all 0.3s ease;
+}
+
+.timeline-dot:hover::after {
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.progress-bar {
+    height: 4px;
+    background: rgba(255, 255, 255, 0.783);
+    width: 100%;
+    margin-top: 20px;
+    border-radius: 2px;
+    overflow: hidden;
+}
+
+.progress {
+    height: 100%;
+    background: #19bb9d;
+    width: 0%;
+    transition: width 0.3s ease;
+}
+
